# openchaos

./: .gitignore  BUILD-STATUS.md  Cargo.toml  PR_DESCRIPTION.md  README-RUST.md  README.md  build.bat  package-lock.json  package.json
.github/workflows/: automerge.yml  old-age.yml
public/: fartscroll.js
src/: github.rs  main.rs  metrics.rs  proxy.ts
src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  retro.css
src/app/api/top-pr/: route.ts
src/app/ascii/: ascii.css  gta-radio.css  layout.tsx  page.tsx
src/app/web2/: gta-radio.css  layout.tsx  page.tsx  web2.css
src/components/: BuyVotes.tsx  Cat.tsx  Clippy.tsx  ControlledChaos.tsx  Countdown.tsx  CursorTrail.tsx  ExpandablePRSection.tsx  Fartscroll.tsx  FramesLayout.tsx  Guestbook.tsx  GuyFieri.tsx  HallOfChaos.tsx  HallOfChaosCard.tsx  IE6BrowserChrome.tsx  IE6Layout.tsx  IE6Styles.tsx  MidiPlayer.tsx  PRCard.tsx  PRList.tsx  StatusBar.tsx  ThemeToggle.tsx  TreeGame.tsx  VoteBoost.tsx  VoteMarketplace.tsx  Web2BetaBadge.tsx  Web2BrowserChrome.tsx  Web2DiggCounter.tsx  Web2Footer.tsx  Web2FramesLayout.tsx  Web2Layout.tsx  Web2LoadingSpinner.tsx  Web2RssIcon.tsx  Web2SocialBookmarks.tsx  Web2TagCloud.tsx  WebCounter.tsx
src/components/ascii/: BuyVotes.tsx  Clippy.tsx  Countdown.tsx  FramesLayout.tsx  HallOfChaos.tsx  HallOfChaosCard.tsx  PRCard.tsx  PRList.tsx
src/lib/: chaos-router.ts  github.ts
src/lib/engine/common/libgogonuts/: process.ts
static/: index.html  styles.css
